--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,20 +17,24 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 
+// Typography Styles
 h1, h2, h3 {
     font-family: "Open Sans", sans-serif;
 }
 
+// Background gradient
 .navbar, .home-callout {
     background: #EB5757;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #000000, #EB5757);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #000000, #EB5757); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
+// Nav Styles
 .navbar {
     border:none;
 }
 
+// Homepage Styles
 .home-callout {
     margin-top: -20px;
     padding-top: 50px;
@@ -38,20 +42,11 @@ h1, h2, h3 {
     color: white;
 }
 
-.navbar-default .navbar-brand {
+.navbar-default .navbar-brand,
+.navbar-default .navbar-nav > li > a {
     color: white;
-}
-
-.navbar-default .navbar-nav > li > a{
-    color:white;
-}
-
-.navbar-default .navbar-brand:hover {
-    color:white;
-    opacity: 0.75;
-}
-
-.navbar-default .navbar-nav > li > a:hover{
-    color:white;
-    opacity:0.75;
+    &:hover {
+        color: white;
+        opacity: 0.75;
+    }
 }
