--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -36,6 +36,11 @@ h1, h2, h3 {
     border:none;
 }
 
+.navbar-brand {
+    font-family: "Open Sans", sans-serif;
+    font-weight: 800;
+}
+
 // Homepage Styles
 .home-callout {
     margin-top: -20px;
