--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,5 @@
-<h1>About Page</h1>
+<div class="container text-center">
+    <h1>About Page</h1>
+    <p>We are DevMatch. Our company focuses on creating an exclusive community
+    for developers and entrepreneurs to meet. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus natus repellendus consectetur, rem qui dolores! Aliquid possimus optio culpa repellat temporibus sit dolores odio, eos nesciunt cumque. Ratione, incidunt, illo?</p>
+</div>
