--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -41,14 +41,6 @@ h1, h2, h3 {
     font-weight: 800;
 }
 
-// Homepage Styles
-.home-callout {
-    margin-top: -20px;
-    padding-top: 50px;
-    padding-bottom: 100px;
-    color: white;
-}
-
 .navbar-default .navbar-brand,
 .navbar-default .navbar-nav > li > a {
     color: white;
@@ -56,4 +48,24 @@ h1, h2, h3 {
         color: white;
         opacity: 0.75;
     }
+}
+
+.navbar-default .navbar-toggle .icon-bar {
+    background: white;
+}
+
+.navbar-default .navbar-toggle {
+    border: 2px solid white;
+    &:hover, &:focus {
+         background-color: #EB5757;   
+    }
+}
+
+
+// Homepage Styles
+.home-callout {
+    margin-top: -20px;
+    padding-top: 50px;
+    padding-bottom: 100px;
+    color: white;
 }
